--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
                 <div class="button-info">
                     <a href="pages/products.html"><button class="button-red">Принтеры RNJet</button></a>
-                    <a href="#"><button class="button-white">Почему именно RN Mark?</button></a>
+                    <a href="pages/about.html"><button class="button-white">Почему именно RN Mark?</button></a>
                 </div>
             </div>
         </section>
@@ -350,24 +350,24 @@
                 </div>
                 <div class="green-info">
                     <ul class="green-grid">
-                        <li>Продукты питания и приправы</li>
-                        <li>Кабель и туруба</li>
-                        <li>Медицина</li>
-                        <li>Картонные упаковки</li>
-                        <li>Удобрение</li>
-                        <li>Экструзионные изделия</li>
-                        <li>Напитки</li>
-                        <li>СИЗ и маски </li>
-                        <li>Электроника</li>
-                        <li>Косметика</li>
-                        <li>Молочные продукты</li>
-                        <li>Автомобили</li>
-                        <li>Пивные банки</li>
-                        <li>Печать на яйцах</li>
-                        <li>Антисептики</li>
-                        <li>Поддоны и деревья</li>
-                        <li>Цемент</li>
-                        <li>Корм для животных</li>
+                        <a href="#"><li>Продукты питания и приправы</li></a>
+                        <a href="#"><li>Кабель и туруба</li></a>
+                        <a href="#"><li>Медицина</li></a>
+                        <a href="#"><li>Картонные упаковки</li></a>
+                        <a href="#"><li>Удобрение</li></a>
+                        <a href="#"><li>Экструзионные изделия</li></a>
+                        <a href="#"><li>Напитки</li></a>
+                        <a href="#"><li>СИЗ и маски </li></a>
+                        <a href="#"><li>Электроника</li></a>
+                        <a href="#"><li>Косметика</li></a>
+                        <a href="#"><li>Молочные продукты</li></a>
+                        <a href="#"><li>Автомобили</li></a>
+                        <a href="#"><li>Пивные банки</li></a>
+                        <a href="#"><li>Печать на яйцах</li></a>
+                        <a href="#"><li>Антисептики</li></a>
+                        <a href="#"><li>Поддоны и деревья</li></a>
+                        <a href="#"><li>Цемент</li></a>
+                        <a href="#"><li>Корм для животных</li></a>
                     </ul>
                 </div>
             </div>
