--- a/pages/RNJet100.html
+++ b/pages/RNJet100.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RNJet 100+ | Промышленный струйный принтер</title>
+    <title>RNJet 100 | Промышленный струйный принтер</title>
     <link rel="shortcut icon" href="../assets/images/Логотип.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/globals.css">
     <link rel="stylesheet" href="../styles/printers.css">
@@ -47,29 +47,28 @@
 
     <main>
         <div class="container">
-            <!-- Секция с принтером -->
+            <!-- Cекция с принтером -->
             <section class="product-hero">
                 <div class="product-image">
-                    <img src="../assets/images/RNJet100+.png">
+                    <img src="../assets/images/RNJet100.png">
                 </div>
                 <div class="product-title">
-                    <h1>RNJet 100+ <span>Промышленный струйный принтер высокого разрешения</span></h1>
-                    <p>RNJet 100+ — это усовершенствованная модель для нанесения мелкого шрифта, обеспечивающая
-                        исключительные возможности кодирования и маркировки продукции. Полная автономность, сенсорное
-                        управление и печать на любых поверхностях.</p>
+                    <h1>RNJet 100 <span>Промышленный поточный принтер</span></h1>
+                    <p>RNJet 100 — промышленный принтер высокого разрешения для нанесения мелкого шрифта. Использует
+                        чернила на масляной и сольвентной основе для печати текста, логотипов, счетчиков, штрихкодов,
+                        дат и данных из динамических баз данных на пористых и непористых поверхностях.</p>
                     <div class="badge-container">
                         <span class="badge">Никакой грязи</span>
-                        <span class="badge">Низкое обслуживание</span>
+                        <span class="badge">Без обслуживания</span>
                         <span class="badge">Быстро сохнет</span>
-                        <span class="badge">Доступно по цене</span>
-                        <span class="badge">Сделано в Канаде</span>
+                        <span class="badge">Доступная цена</span>
+                        <span class="badge">Сенсорный экран</span>
                     </div>
                     <div class="product-cta">
                         <a href="#" class="rn-button"
-                            style="background: var(--red); color: white; padding: 15px 30px; border-radius: 10px;">Скачать
-                            брошюру</a>
+                            style="background: var(--red); color: white; padding: 15px 30px;">Скачать брошюру</a>
                         <a href="#" class="rn-button"
-                            style="background: transparent; color: var(--red); border: 2px solid var(--red); padding: 15px 30px; border-radius: 10px;">Запросить
+                            style="background: transparent; color: var(--red); border: 2px solid var(--red); padding: 15px 30px;">Запросить
                             цену</a>
                     </div>
                 </div>
@@ -77,13 +76,13 @@
 
             <!-- Детальная информация -->
             <section class="info-grid">
-                <!-- Карточка: Технология и основные параметры -->
+                <!-- Технические характеристики -->
                 <div class="info-card">
                     <h2>Технические характеристики</h2>
                     <table class="specs-table">
                         <tr>
                             <td>Технология</td>
-                            <td>Пьезоэлектрическая печатающая головка (DoD)</td>
+                            <td>Пьезоэлектрическая печатающая головка (DoD), гравитационная подача</td>
                         </tr>
                         <tr>
                             <td>Макс. скорость печати</td>
@@ -107,11 +106,15 @@
                         </tr>
                         <tr>
                             <td>Типы чернил</td>
-                            <td>Сольвентные, масляные, пищевые</td>
+                            <td>Сольвентные, масляные, альтернативные</td>
+                        </tr>
+                        <tr>
+                            <td>Цвета чернил</td>
+                            <td>Черный, белый, красный, желтый, синий и др.</td>
                         </tr>
                         <tr>
                             <td>Ориентация печати</td>
-                            <td>Любая (сбоку, снизу, сверху, под углом)</td>
+                            <td>Любой угол (сбоку, снизу, сверху)</td>
                         </tr>
                         <tr>
                             <td>Порты ввода/вывода</td>
@@ -123,7 +126,7 @@
                         </tr>
                         <tr>
                             <td>Питание</td>
-                            <td>12В, 5.0А</td>
+                            <td>12 В, 5,0 А</td>
                         </tr>
                         <tr>
                             <td>Количество печатающих головок</td>
@@ -131,7 +134,7 @@
                         </tr>
                         <tr>
                             <td>Управление чернилами</td>
-                            <td>Отсутствует индикатор уровня чернил и система оповещения о низком уровне чернил.</td>
+                            <td>На основе картриджа, без индикатора уровня</td>
                         </tr>
                         <tr>
                             <td>Рабочая температура</td>
@@ -139,90 +142,68 @@
                         </tr>
                         <tr>
                             <td>Температура хранения</td>
-                            <td>от -5°C до 50°C</td>
+                            <td>-5°C … +50°C</td>
                         </tr>
                         <tr>
                             <td>Сертификаты</td>
                             <td>CE, TUV, FCC, UL, CSA</td>
                         </tr>
-                        <tr>
-                            <td>Подключение</td>
-                            <td>USB, RS-232, Ethernet</td>
-                        </tr>
-                        <tr>
-                            <td>Система</td>
-                            <td>На основе картриджа</td>
-                        </tr>
-                        <tr>
-                            <td>Сертификаты источников питания</td>
-                            <td>CE, TUV, FCC, UL, CSA</td>
-                        </tr>
                     </table>
                 </div>
 
-                <!-- Карточка: Функции и возможности печати -->
+                <!-- Функции печати и операции -->
                 <div class="info-card">
                     <h2>Функции печати</h2>
                     <ul class="feature-list-compact">
-                        <li>Печать текста, логотипов, штрих-кодов (все популярные форматы)</li>
-                        <li>GS1 Data Matrix, QR-коды, уникальные серийные номера</li>
-                        <li>Счетчики, даты, время, данные из динамической базы данных (.CSV)</li>
-                        <li>Двухцветная маркировка (опционально)</li>
-                        <li>Библиотека сообщений: более 1000 файлов</li>
+                        <li>Высота символов до 18 мм</li>
+                        <li>Библиотека сообщений: более 1000 сообщений</li>
+                        <li>Печать текста, логотипов, штрих-кодов, QR-кодов, Data Matrix</li>
+                        <li>Динамические данные: дата, время, счетчик, смена, внешняя БД (.CSV)</li>
+                        <li>Режимы печати: одиночная и непрерывная</li>
                         <li>Автономная работа — ПК не требуется</li>
                         <li>Создание макетов прямо на сенсорном экране</li>
-                        <li>Единичный и непрерывный pежимы печати</li>
-                        <li>Программное обеспечение RN Soft + </li>
-                        <li>Английский (по умолчанию), французский, испанский, итальянский, португальский, русский,
-                            персидский и многие другие языки</li>
                     </ul>
-                    <div style="margin-top: 25px;">
-                        <h3 style="color: var(--blue);">Поддерживаемые форматы баз данных</h3>
-                        <p>.CSV, подключение к внешним устройствам (весы, сканеры)</p>
+                    <div style="margin-top: 20px;">
+                        <h3 style="color: var(--blue);">Программное обеспечение</h3>
+                        <p>RN Soft +, поддержка 30+ языков (русский, английский, испанский и др.)</p>
                     </div>
                 </div>
 
-                <!-- Карточка: Цвета чернил -->
+                <!-- Цвета чернил и система -->
                 <div class="info-card">
-                    <h2>Цвета чернил</h2>
+                    <h2>Чернила и расходные материалы</h2>
                     <div class="ink-colors">
                         <span class="color-dot" style="background: #000;"></span> Черный
                         <span class="color-dot" style="background: #fff; border:1px solid #000;"></span> Белый
-                        пигментированный
                         <span class="color-dot" style="background: #ff0000;"></span> Красный
                         <span class="color-dot" style="background: #0000ff;"></span> Синий
                         <span class="color-dot" style="background: #ffff00;"></span> Желтый
                     </div>
-                    <p style="margin-top: 15px;">Также доступны фиолетовый, зелёный и другие цвета под заказ. Чернила на
-                        масляной, сольвентной и водной основе для любых поверхностей.</p>
+                    <p style="margin-top: 15px;">Картриджная система. Чернила на масляной, сольвентной и альтернативной
+                        основе.</p>
                 </div>
 
-                <!-- Карточка: Применение  -->
+                <!-- Применение -->
                 <div class="info-card">
                     <h2>Применение</h2>
-                    <p>Идеально подходит для маркировки:</p>
                     <div class="applications-list">
                         <span class="app-item">Картонные коробки</span>
                         <span class="app-item">Упаковка пищевых продуктов</span>
                         <span class="app-item">Чистящие средства</span>
                         <span class="app-item">Автомобильные запчасти</span>
                         <span class="app-item">Фармацевтика</span>
-                        <span class="app-item">Мешки с цементом/мукой</span>
-                        <span class="app-item">Пластик и металл</span>
+                        <span class="app-item">Мешки с мукой/цементом</span>
+                        <span class="app-item">Пластик</span>
+                        <span class="app-item">Металл</span>
                         <span class="app-item">Стекло</span>
-                        <span class="app-item">Дерево</span>
-                        <span class="app-item">Кабель и трубы</span>
                     </div>
-                    <div style="margin-top: 20px; background: #f0f0f0; padding: 15px; border-radius: 15px;">
-                        <strong>Примеры дат:</strong> PRO 02/12/2025 EXP 05/10/2027 → идеально для продуктов питания и
-                        напитков.
-                    </div>
+                    <p style="margin-top: 15px;">Пористые и непористые поверхности.</p>
                 </div>
             </section>
 
             <!-- Почему вам стоит обратить внимание на этот принтер -->
             <section class="benefits-highlight">
-                <h2>8 причин выбрать RNJet 100+</h2>
+                <h2>Почему стоит обратить внимание на RNJet 100</h2>
                 <div class="benefits-grid">
                     <div class="benefit-item">
                         <h3>1. Доступность</h3>
@@ -230,39 +211,40 @@
                     </div>
                     <div class="benefit-item">
                         <h3>2. Простота эксплуатации</h3>
-                        <p>Интуитивный интерфейс, быстрый старт.</p>
+                        <p>Интуитивное управление.</p>
                     </div>
                     <div class="benefit-item">
-                        <h3>3. Высокая скорость</h3>
-                        <p>До 60 м/мин, до 10 читаемых строк.</p>
+                        <h3>3. Скорость печати</h3>
+                        <p>До 60 м/мин, до 10 строк текста.</p>
                     </div>
                     <div class="benefit-item">
                         <h3>4. Надежность</h3>
-                        <p>Низкие требования к обслуживанию, печатающая головка всегда чистая.</p>
+                        <p>Неприхотлив в обслуживании, низкие требования.</p>
                     </div>
                     <div class="benefit-item">
-                        <h3>5. Устойчивость</h3>
+                        <h3>5. Прочность</h3>
                         <p>Выдерживает вибрации и перепады температур.</p>
                     </div>
                     <div class="benefit-item">
                         <h3>6. Автономная работа</h3>
-                        <p>ПК не требуется, всё на сенсорном экране.</p>
+                        <p>ПК не требуется.</p>
                     </div>
                     <div class="benefit-item">
                         <h3>7. Гибкость печати</h3>
-                        <p>Текст, даты, логотипы, штрих-коды, динамические базы данных.</p>
+                        <p>Текст, даты, логотипы, штрих-коды, базы данных.</p>
                     </div>
-                    <div class="benefit-item">
-                        <h3>8. Разнообразие чернил</h3>
-                        <p>Черный, белый, жёлтый, синий, красный, фиолетовый и др.</p>
-                    </div>
+                </div>
+                <div
+                    style="margin-top:30px; background: rgba(255,255,255,0.2); padding:20px; border-radius:20px; font-family: monospace;">
+                    <div style="font-size:20px;">Ref:108.5897.895</div>
+                    <div style="font-size:18px;">0112345678901234</div>
+                    <div>PRO 02/12/2019 EXP 05/10/2021</div>
                 </div>
             </section>
 
-            <!-- 8 преимуществ -->
+            <!-- 8 преимуществ RNJet 100 -->
             <section class="advantages">
-                <h2>Ключевые преимущества RNJet 100+
-                </h2>
+                <h2>8 преимуществ RNJet 100 </h2>
                 <div class="printers-grid">
                     <div class="printers-grid-card">Быстрая установка – легко интегрируется в линию</div>
                     <div class="printers-grid-card">Превосходное качество печати – легко читается и сканируется</div>
@@ -286,7 +268,7 @@
                     </div>
                     <div class="resource-item">
                         <img src="../assets/images/Медаль.svg" alt="BROCHURE">
-                        <h4>Брошюра RNJet 100+</h4>
+                        <h4>Брошюра RNJet 100</h4>
                         <a href="#" style="color: var(--red);">Скачать</a>
                     </div>
                     <div class="resource-item">
