--- a/pages/RNJetEP-6H+.html
+++ b/pages/RNJetEP-6H+.html
@@ -124,11 +124,11 @@
                         </tr>
                         <tr>
                             <td>Дисплей</td>
-                            <td>7" сенсорный ЖК-экран (автономный режим)</td>
+                            <td>7-дюймовый сенсорный ЖК-экран</td>
                         </tr>
                         <tr>
                             <td>Питание</td>
-                            <td>12В, 5.0А</td>
+                            <td>12 В – 0,5 А</td>
                         </tr>
                         <tr>
                             <td>Вес нетто</td>
