--- a/pages/products.html
+++ b/pages/products.html
@@ -89,7 +89,7 @@
                             <p class="product-description">RNJet 100+ — это промышленный принтер высокого разрешения для
                                 печати мелких символов, обеспечивающий замечательные возможности кодирования и
                                 маркировки продукции.</p>
-                            <a href="../pages/RNJet100+.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet100+.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -102,7 +102,7 @@
                             <h3>RNJet 200+</h3>
                             <p class="product-description">RNJet 200+ — это промышленный кодировщик с двумя головками,
                                 высоким разрешением и малым количеством символов.</p>
-                            <a href="../pages/RNJet200+.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet200+.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                             <p class="product-description-date">RNJet 100 — это промышленный принтер высокого разрешения
                                 для нанесения мелкого шрифта, обеспечивающий замечательные возможности кодирования и
                                 маркировки продукции.</p>
-                            <a href="../pages/RNJet100.html" class="add-to-cart">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet100.html" class="add-to-cart">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -141,7 +141,7 @@
                             <h3>RNJet 200</h3>
                             <p class="product-description-date">RNJet 200 — это двухголовочный промышленный принтер с
                                 высоким разрешением, предназначенный для нанесения мелкосимвольных надписей.</p>
-                            <a href="../pages/RNJet200.html" class="add-to-cart">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet200.html" class="add-to-cart">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -154,7 +154,7 @@
                             <h3>RNJet EP-6H+</h3>
                             <p class="product-description-date">RNJet EP-6H+ — это доступный по цене, высокоскоростной и
                                 высокоточный промышленный принтер для печати на яйцах.</p>
-                            <a href="../pages/RNJetEP-6H+.html" class="add-to-cart">ПОДРОБНЕЕ</a>
+                            <a href="./RNJetEP-6H+.html" class="add-to-cart">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                             <p class="product-description">Струйный кодировщик RNJet 100 XL — это высокоскоростной
                                 принтер для нанесения даты мелкими символами. Система кодирования основана на картриджах
                                 объемом 430 мл.</p>
-                            <a href="../pages/RNJet100XL.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet100XL.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -183,7 +183,7 @@
                             <h3>RNJet 200 XL</h3>
                             <p class="product-description">RNJet 200 XL — это двухголовочный высокоточный промышленный
                                 термопринтер для печати мелких символов, оснащенный картриджами объемом 430 мл.</p>
-                            <a href="../pages/RNJet200XL.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet200XL.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -196,7 +196,7 @@
                             <h3>RNJet H1+</h3>
                             <p class="product-description">Струйный кодировщик RNJet H1+ — это высокоскоростной принтер
                                 для нанесения дат мелким шрифтом, обеспечивающий высокую точность печати.</p>
-                            <a href="../pages/RNJetH1+.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJetH1+.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -209,7 +209,7 @@
                             <h3>RNJet H2+</h3>
                             <p class="product-description">RNJet H2+ — это двухголовочный высокоточный термопринтер для
                                 печати мелких символов, обеспечивающий быстрое кодирование и маркировку.</p>
-                            <a href="../pages/RNJetH2+.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJetH2+.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -222,7 +222,7 @@
                             <h3>RNJet H2 ST</h3>
                             <p class="product-description">Струйный кодировщик RNJet H2 ST — это высокоскоростной
                                 кодировщик даты с двойной шовной головкой для быстрой маркировки и кодирования.</p>
-                            <a href="../pages/RNJetH2ST.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJetH2ST.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -235,7 +235,7 @@
                             <h3>RNJet H4 ST</h3>
                             <p class="product-description">RNJet H4 ST — это двухголовочный высокоточный термопринтер
                                 для печати мелких символов с проверенной производительностью.</p>
-                            <a href="../pages/RNJetH4ST.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJetH4ST.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -248,7 +248,7 @@
                             <h3>RNJet T1</h3>
                             <p class="product-description">Высокоскоростной струйный кодировщик Inkjet Coder RNJet T1
                                 обеспечивает быструю сухую маркировку. Высота печати до 1 дюйма.</p>
-                            <a href="../pages/RNJetT1.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJetT1.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -261,7 +261,7 @@
                             <h3>RNJet T2 ST</h3>
                             <p class="product-description">RNJet T2 ST — это двухголовочный промышленный термопринтер с
                                 высоким разрешением, обеспечивающий высоту печати до 50 мм.</p>
-                            <a href="../pages/RNJetT2ST.html" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJetT2ST.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
                 </div>
@@ -287,7 +287,7 @@
                             <h3>RNJetE1-72+</h3>
                             <p class="product-description">RNJET E1-72+ — это промышленный струйный принтер высокого
                                 разрешения для печати крупных символов.</p>
-                            <a href="#" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJetE1-72+.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -300,7 +300,7 @@
                             <h3>RNJet E1-140+</h3>
                             <p class="product-description">RNJet E1-140+ — это промышленный кодировщик с двумя
                                 печатающими головками, высоким разрешением и возможностью ввода крупных символов.</p>
-                            <a href="#" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJetE1-140+.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
                 </div>
@@ -325,7 +325,7 @@
                             <h3>RNJet 72</h3>
                             <p class="product-description-date">RNJet 72 — это промышленный струйный принтер высокого
                                 разрешения для печати на картонных коробках и кодировщик крупных символов.</p>
-                            <a href="#" class="add-to-cart">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet72.html" class="add-to-cart">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -338,7 +338,7 @@
                             <h3>RNJet 140</h3>
                             <p class="product-description-date">RNJet 140 — это промышленный принтер с высоким
                                 разрешением, двумя печатающими головками и крупными символами.</p>
-                            <a href="#" class="add-to-cart">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet140.html" class="add-to-cart">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
                 </div>
@@ -353,7 +353,7 @@
                             <h3>RNJet 72 XL</h3>
                             <p class="product-description">RNJet 72 XL — это промышленный струйный принтер с картриджами
                                 (430 мл) для печати на картонных коробках и нанесения крупных символов.</p>
-                            <a href="#" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet72XL.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -366,7 +366,7 @@
                             <h3>RNJet 140 XL</h3>
                             <p class="product-description">RNJet 140 XL — это промышленный принтер высокого разрешения с
                                 двумя печатающими головками и картриджами для печати крупных символов.</p>
-                            <a href="#" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet140XL.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -380,7 +380,7 @@
                             <p class="product-description">RNJet 288 XL — это промышленный струйный принтер с
                                 картриджами (430 мл) для печати на картонных коробках. Высота печати достигает 288 мм.
                             </p>
-                            <a href="#" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet288XL.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
 
@@ -393,7 +393,7 @@
                             <h3>RNJet 140 BC (двухцветный)</h3>
                             <p class="product-description">RNJet 140 BC — это промышленный принтер высокого разрешения с
                                 четырьмя печатающими головками и картриджами для двухцветной печати.</p>
-                            <a href="#" class="rn-button">ПОДРОБНЕЕ</a>
+                            <a href="./RNJet140BC.html" class="rn-button">ПОДРОБНЕЕ</a>
                         </div>
                     </div>
                 </div>
@@ -445,7 +445,8 @@
             <div class="contact-info-grid">
                 <div class="contact-info-column">
                     <a href="../index.html"><img src="../assets/images/Логотип.svg" class="logotype"></a>
-                    <p>Компания RN Mark Inc. — производитель промышленных струйных принтеров в Канаде. Более 20 лет мы с
+                    <p class="none">Компания RN Mark Inc. — производитель промышленных струйных принтеров в Канаде.
+                        Более 20 лет мы с
                         удовольствием разрабатываем и поставляем доступные и высокопроизводительные кодировщики по всему
                         миру.</p>
                 </div>
@@ -467,6 +468,7 @@
                         <a href="https://twitter.com/rnmarkinc"><img src="../assets/images/twitter.svg"></a>
                     </div>
                 </div>
+
             </div>
 
             <div class="copyright">
