--- a/pages/RNJet200+.html
+++ b/pages/RNJet200+.html
@@ -144,11 +144,11 @@
                         </tr>
                         <tr>
                             <td>Дисплей</td>
-                            <td>7" сенсорный ЖК-экран</td>
+                            <td>7-дюймовый сенсорный ЖК-экран</td>
                         </tr>
                         <tr>
                             <td>Питание</td>
-                            <td>12 В, 5,0 А</td>
+                            <td>12 В – 0,5 А</td>
                         </tr>
                         <tr>
                             <td>Количество печатающих головок</td>
