--- a/pages/RNJet200.html
+++ b/pages/RNJet200.html
@@ -150,11 +150,11 @@
                         </tr>
                         <tr>
                             <td>Дисплей</td>
-                            <td>7" сенсорный контроллер</td>
+                            <td>7-дюймовый сенсорный ЖК-экран</td>
                         </tr>
                         <tr>
                             <td>Питание</td>
-                            <td>12В, 5.0А</td>
+                            <td>12 В – 0,5 А</td>
                         </tr>
                         <tr>
                             <td>Количество печатающих головок</td>
