--- a/pages/RNJetT2ST.html
+++ b/pages/RNJetT2ST.html
@@ -123,11 +123,11 @@
                         </tr>
                         <tr>
                             <td>Дисплей</td>
-                            <td>7" сенсорный контроллер</td>
+                            <td>7-дюймовый сенсорный ЖК-экран</td>
                         </tr>
                         <tr>
                             <td>Питание</td>
-                            <td>12 В, 5,0 А</td>
+                            <td>12 В – 5 А</td>
                         </tr>
                         <tr>
                             <td>Количество печатающих головок</td>
